--- a/index.html
+++ b/index.html
@@ -198,9 +198,9 @@
     }
 });
     const conversionMap = [
-        { uni: 'ڵ', ali: 'لَ' }, { uni: 'ڕ', ali: 'رَ' }, { uni: 'ژ', ali: 'ذ' }, { uni: 'ۆ', ali: 'وَ' },  { uni: 'ڵا', ali: 'لَا' },
-        { uni: 'پ', ali: 'ث' }, { uni: 'چ', ali: 'ض' }, { uni: 'گ', ali: 'ط' }, { uni: 'ڵ', ali: 'لَ' },   { uni: 'هە', ali: 'هة' },
-        { uni: 'ڤ', ali: 'ظ' }, { uni: 'ێ', ali: 'يَ' }, { uni: 'ۆ', ali: 'وَ' }, { uni: 'ڕ', ali: 'رَ' },   { uni: 'قەوارەی زایۆنی', ali: 'ئیسرائیل' },
+        { uni: 'قەوارەی زایۆنی', ali: 'ئیسرائیل' }, { uni: 'ڕ', ali: 'رَ' }, { uni: 'ژ', ali: 'ذ' }, { uni: 'ۆ', ali: 'وَ' },  { uni: 'ڵا', ali: 'لَا' },
+        { uni: 'پ', ali: 'ث' }, { uni: 'چ', ali: 'ض' }, { uni: 'گ', ali: 'ط' }, { uni: 'ڵ', ali: 'لَ' },   { uni: 'ڵ', ali: 'لَ' },
+        { uni: 'ڤ', ali: 'ظ' }, { uni: 'ێ', ali: 'يَ' }, { uni: 'ۆ', ali: 'وَ' }, { uni: 'ڕ', ali: 'رَ' },   { uni: 'ڵ ', ali: 'لَ' },
         { uni: 'ە', ali: 'ة' }, { uni: 'ی', ali: 'ي' }, { uni: 'ک', ali: 'ك' },  { uni: 'ڵا', ali: 'لآ' },
     ];
 
