--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
         .dark-mode .h-center h1 { color: #4caf50; }
 
         .h-left { display: flex; align-items: center; justify-content: flex-end; gap: 8px; }
-        .stat-item { font-size: 11px; font-weight: bold; color: #555; background: #eee; padding: 5px 8px; border-radius: 6px; cursor: pointer; white-space: nowrap; }
+        .stat-item { font-size: 11px; font-weight: bold; color: #555; background: #ccc !important; padding: 5px 8px; border-radius: 6px; cursor: pointer; white-space: nowrap; }
         .dark-mode .stat-item { background: #333; color: #ddd; }
         
-        .font-ctrl { display: flex; gap: 2px; background: #eee; border-radius: 6px; padding: 2px; }
+        .font-ctrl { display: flex; gap: 2px; background: #ccc !important; border-radius: 6px; padding: 2px; }
         .dark-mode .font-ctrl { background: #333; }
         .font-btn { border: none; background: none; padding: 2px 6px; cursor: pointer; font-weight: bold; color: #333; font-size: 12px; }
         .dark-mode .font-btn { color: white; }
@@ -160,8 +160,8 @@
     <div class="header">
         <div class="h-right" id="clock">...</div>
         <div class="h-buttons-area">
-            <button class="btn-nav btn-nav-font" onclick="toggleFontModal()">🎁 دابه‌زاندنی فۆنت</button>
-            <button class="btn-nav btn-nav-c4k" onclick="toggleC4kModal()">✨ کەرەستەی C4Kurdi</button>
+            <button class="btn-nav btn-nav-font" onclick="toggleFontModal()">🎁  فۆنت</button>
+            <button class="btn-nav btn-nav-c4k" onclick="toggleC4kModal()">✨  C4Kurdi</button>
         </div>
         <div class="h-center">
             <h1>وەرگێڕی فۆنت و فایل</h1>
